# S.A.M.U.E.L.

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  samuel.service
.claude/: CLAUDE.md
.gitea/workflows/: ci.yml
.github/: FUNDING.yml
config/: agent.json  architecture.json  audit.json  eval.json  features.json  gates.json  hooks.json  labels.json  llm.json  notifications.json  privacy.json  repo_patterns.json
config/llm/: defaults.json  providers.json
config/workflows/: autonomous.json  chat.json  night.json  patch.json  (+3 more)
docs/: AI_ACT_COMPLIANCE.md  AI_ACT_TECHNICAL_DOC.md  DSGVO_VVT.md  HANDOVER_2026-05-06.md  OPERATING_RULES.md  PHASE_WORKFLOW.md  PREMIUM_SETUP.md  README_technical.md  SAMUEL_ARCHITECTURE_V2.1.md  V2.1_GAP_ANALYSE_THEMATISCH.md
samuel/: __main__.py  cli.py  server.py
scripts/: pre-receive
technische Beschreibungen/: README.md  pipeline_evaluation.md  pipeline_issue_to_llm.md  pipeline_planning.md  pipeline_pr_gates.md
tests/: __init__.py  test_architecture_v2.py  test_audit_async.py  test_audit_config.py  test_audit_jsonl.py  test_cli_changelog.py  test_cli_self_check.py  test_cli_version.py  test_compliance_loading.py  test_core_bootstrap.py  test_core_bus.py  test_core_commands.py  test_core_config.py  test_core_errors.py  test_core_events.py  test_core_git.py  test_core_issue_context.py  test_core_logging.py  test_core_ports.py  test_core_project_files.py  test_core_types.py  test_core_workflow.py  test_event_mapping_complete.py  test_event_smoke.py  test_gitea_integration.py  test_integration_e2e.py  test_license.py  test_llm_issue_correlation.py  test_port_contracts.py  test_scm_config.py  test_self_mode.py  test_server_dashboard.py  test_skeleton.py  test_task_routing.py  v1_v2_mapping.py
tools/: generate_keypair.py  generate_license.py
(+182 files in other folders)
